# UrbanAlert

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  logger.py  prestart.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0a8f2ff30fa9_delete_all_data_from_table.py  2db325aee994_update_user_table_created_at_field.py  5c287b9d4bcb_update_user_table_created_at_field.py  5d3829e8026f_remove_field_first_name_last_name_add_.py  640f0b4748b3_refactor_a_complaint_table_add_new_.py  8efdf4ede290_delete_column_priority_in_complaint_.py  c4d19b27d01c_delete_all_data.py  d321f9b79ad9_create_comment_models.py  daf9c14635b2_delete_last_name_field.py  e9429672b255_create_new_table_complaint.py  f11b4d8e5cc3_create_user_table.py
src/: __init__.py  main.py  middlewares.py
src/auth/: __init__.py  exceptions.py  routes.py  schemas.py  services.py  utils.py
src/comments/: __init__.py  exceptions.py  models.py  repositories.py  routes.py  schemas.py  services.py
src/common/: __init__.py  base_repository.py  db_decorators.py  exceptions.py
src/complaints/: __init__.py  complaint_repositories.py  complaint_routes.py  complaint_services.py  complaint_status.py  exceptions.py  models.py  repositories.py  schemas.py
src/core/: __init__.py  base_services.py  database.py  database_helper.py  dependencies.py  redis_client.py  security.py  settings.py
src/images/: __init__.py  images_service.py
src/notification/: __init__.py  email_notification.py  email_notification_service.py  email_notifier.py  notification_strategy.py  (+6 more)
test/: conftest.py  utils.py
(+39 files in other folders)
