[project]
name = "full-stack"
version = "0.1.0"
description = ""
authors = [
    {name = "Eraliev006",email = "eraliev.adilet006@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
package-mode = false
dependencies = [
]

[tool.poetry]
package-mode = false

packages = [{include='src', from='full-stack'}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
