[project]
name = "full-stack"
version = "0.1.0"
description = ""
authors = [
    {name = "Eraliev006",email = "eraliev.adilet006@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
package-mode = false
dependencies = [
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy[async] (>=2.0.40,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "aiosmtplib (>=4.0.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

packages = [{include='src', from='full-stack'}]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
